todo_app/client/src/App.css
body {
  background-color: #F5F8FA;
}

.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.spinner {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.main {
  padding: 10px;
  flex-grow: 1;
  display:flex;
  flex-direction: row;
  justify-content: space-around;
}

.editor {
  order: 1;
  flex-grow: 1;
  counter-reset: spans;
  height: 90vh;
  width: 50vw;
  overflow-y: auto;
  overflow-x: hidden;
  /* background-color: #F5F8FA; */
}

.editor-toolbar {
  background-color: #F5F8FA;
}

.matrix {
  text-align: left;
  width: 30vw;
  height: 90vh;
  /* padding-top: 46px; */
  order: 2;
  background-color: #F5F8FA;
  overflow: auto;
}

.priority-grid {
  display: grid;
  grid-template-columns: repeat(8 1fr);
  grid-template-rows: repeat(5 1fr);
  height: 100%;
  box-sizing: border-box;
}
/*
           _______ ------- _______
      1---2---3---4---5---6---7---8---9
  |   |
  |   2
  | | |
    | 3
  | | |
  |   4
  |   |
      5
*/

/*grid-area: <row-start> / <column-start> / <row-end> / <column-end> */

.urgent-quick {
  grid-area: 1 / 6 / 3 / 8;
  /* border: 1px solid red; */
}
.urgent-not-quick {
  grid-area: 1 / 2 / 3 / 4;
  /* border: 1px solid blue; */
}
.not-urgent-quick {
  grid-area: 3 / 6 / 5 / 8;
  /* border: 1px solid orange; */
}
.not-urgent-not-quick {
  grid-area: 3 / 2 / 5 / 4;
  /* border: 1px solid pink; */
}
.unclassified {
  grid-area: 2 / 4 / 4 / 6;
  /* border: 1px solid black; */
}
.droppy-area-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* overflow: scroll; */
}
.droppy-area{
  width: 90%;
  height: 90%;
}

.draggy-thing {
  /* border: 1px solid gray; */
  border-radius: 3px;
  box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.15), 0 0 0 rgba(16, 22, 26, 0), 0 0 0 rgba(16, 22, 26, 0);
}

.empty-row {
  grid-area: 5 / 1 / 6 / 9;
}
.empty-column {
  grid-area: 1 / 8 / 5 / 9;
}

.ugly-line-numbers {
  margin: 0;
  line-height: 20px;
  padding: 0;
  display: flex;
}

.public-DraftStyleDefault-block::before {
  font-family: monospace;
  counter-increment: spans;
  content: counter(spans);
  vertical-align: text-bottom;
  /* border: 1px solid blue; */
  position: absolute;
  left: -25px;
  top: 1px;
  opacity: 0.3;
}

.ugly-list {
  /* border: 1px solid red; */
  padding-left: 30px;
}

.rdw-hashtag-link {
  background-color: #fff !important;
  color: #aaa !important;
  font-family: monospace;
}

.priority-list {
  list-style: none;
  padding: 0;
  list-style-position: inside;
  text-indent: -2em;
  padding: .4em 0 0 2em;
}

.lineNum {
  display: block;
  width: 2em;
  padding-right: 4px;
  color: #aaa;
  float:left;
  font-family: monospace;
}

.lineNumTag {
  float: left;
  font-family: monospace;
}

.hashtag-button {
  margin: 2px 5px;
}

.tagNum {
  /* font-family: monospace; */
  display: inline-block;
  text-align: center;
  background-color: #EBF1F5;
  border-radius: 2px;
  width: 1.2em;
  color: #5C7080;
}

.tag-results {
  padding: 10px;
}

.hash-card {
  width: 95%;
  padding: 15px;
  margin: 6px 0;
}

